# cs2-downloader-py

./: .gitignore  README.md  config.json  pyproject.toml  translations.json
SteamDownloaderV2/: SteamDownloader.deps.json  SteamKit2.xml
resources/: 启动CS2.bat
src/: download.py  main.py  patcher.py  translate.py
